--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -134,11 +134,12 @@
           </div>
         </div>
     </div>
-        <div class="row  row-cols-lg-3  row-cols-md-2  row-cols-sm-1" >
+    <%if(Alllisting.length!=0){%>    
+    <div class="row  row-cols-lg-3  row-cols-md-2  row-cols-sm-1" >
               <%for(list of Alllisting){%>
                <a href="/listings/<%=list._id%>" class="listing-link">
                 <div class="card col card-listing" style="max-width:26rem;">
-                    <img src=<%=list.image.url%> class="card-img-top" alt="image">
+                    <img src=<%=list.image.url%> class="card-img-top" alt=<%=list.image.url%>>
                     <div class="card-img-overlay card-blur"></div>
                     <div class="card-body">
                         <p class="card-text">
@@ -150,6 +151,10 @@
                 </a>
             <%}%>    
         </div>
+        <%}%>
+        <%if(Alllisting.length==0){%>
+            <h3 style="text-align: center; color:gray">Airbnb is not avaliable on this location.</h>   
+        <%}%>
 
 </body>
 <script>
