--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -48,6 +48,22 @@
        object-fit:cover;
        margin-left:4px;
     }
+    @media (max-width:767px){
+    .box{
+        width:99%;
+    }
+    .filter{
+        display:none;
+    
+    }
+     .imagebox1{
+        height:48%;
+        width:48%;
+     }
+     .imagebox{
+        display:none;
+     }
+  }
     .imagebox1 img  , .imagebox img{
         border-radius:5px;
         height:100%;
@@ -62,6 +78,7 @@
         padding-left:0.25rem;
         height:2.5rem;
     }
+
 </style>
 <body> 
     <div id="filter">
