--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,33 +1,17 @@
-<style>
-  .searchbox{
-    margin-left:25vw;
-     padding:10px;
-      }
-      .hidden-search-bar{
-        display:none;
-      }
-      @media (max-width:767px){
-        .navdesign{
-         background-color:#F1F3F4;
-         border-radius:4px;
-        }
-        .searchbar-design{
-          display:none;
-        }
-        .hidden-search-bar{
-          display: inline-block;
-        }
-      }
-</style>
 <body>
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top border-bottom">
+       
         <div class="container-fluid">
-          <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+        <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+          <div class="mt-2 logobox">
+            <h5 style="color:black;">Wanderlust</h5>
+          </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
           </button>
+          
           <div class="collapse navbar-collapse navdesign" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ms-md-3">
               <a class="nav-link" href="/listings">Explore</a>
             </div>
         <form action="/listings/search" method="get" class="searchbar-design">              
@@ -54,13 +38,4 @@
           </div>
         </div>
       </nav>
-  <div class="searchbar-wrapper bg-white border-bottom w-100 hidden-search-bar" style="position: sticky; top: 56px; z-index:2;">
-    <form action="/listings/search" method="get" class="container py-2 d-flex flex-wrap align-items-center justify-content-center border border-white border-2">
-     <div class="d-flex flex-wrap gap-2  white-border bg-light ">
-      <input type="text" class="form-control" name="place" placeholder="Enter place" style="max-width: 110px;">
-      <input type="text" class="form-control" name="country" placeholder="Country" style="max-width: 110px;">
-        </div>
-      <button class="btn btn-danger ms-2">Search</button>
-   </form>
-  </div>
 </body>
