--- a/views/listings/new_record.ejs
+++ b/views/listings/new_record.ejs
@@ -1,7 +1,7 @@
 <%-layout('layouts/boilerplate')-%>
 <body>
-    <div class="row">
-    <div class="col-7 offset-2">
+    <div class="row ms-md-3 ms-2">
+    <div class=" offset-0 col-12 col-md-7 offset-md-2">
         <h3 class="mt-2 mb-2">Create a new listing</h3>
     <form action="/listings" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3 mt-2">
