--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,7 +1,7 @@
 <%-layout('layouts/boilerplate.ejs')-%>
 <body>
     <div class="row">    
-        <div class="col-7 offset-2">
+        <div class="col-md-7 offset-md-2 offset-0 col-12">
             <h3 class="mt-2">Edit listing</h3>
         <form action="/listings/<%=record._id%>?_method=PUT" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
         <div class="mb-3">
