--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
-<div class="row mt-3">
-    <h2 class="offset-3 mt-3 mb-3">SignUp On Wanderlust</h2>
-    <div class="col-6 offset-3">
+<div class="row mt-3 ms-2">
+    <h2 class="offset-md-3 mt-3 mb-3">SignUp On Wanderlust</h2>
+    <div class="col-md-6 offset-md-3 col-12 offset-0">
          <form method="Post" action="/user/signup" class="needs-validation" novalidate>
             <div class="mt-3">
                 <label for="username" class="form-label">Username <span style="color:red;">*</span></label>
